Head First Lounge styled

--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -22,4 +22,8 @@ body{
     #Heading{
         text-decoration: underline;
     }
+    ol{
+        margin-left: 15%;
+        font-size: 35px;
+    }
 }
